[project]
name = "mcpdemo"
version = "0.1.0"
description = "This is a practice on mcp servers using playright, airbnb and duck duck go search servers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-groq>=0.3.4",
    "langchain-openai>=0.3.27",
    "mcp-use>=1.3.3",
]
